--- a/JPAThymeleafProject/src/main/resources/application.properties
+++ b/JPAThymeleafProject/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.application.name=JPAThymeleafProject
 # 포트번호 : 8095
 server.port=8095
 # db 연결
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@project-db-campus.smhrd.com:1524:xe
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.username=hr
-spring.datasource.password=hr
+spring.datasource.username=navercloudtest
+spring.datasource.password=navercloudtest
 
 # context-path : jpa
 server.servlet.context-path=/jpa
